--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
+```json
 {
-    "framework": "vite",
-    "cleanUrls": true,
     "rewrites": [
         {
             "source": "/(.*)",
@@ -8,3 +7,4 @@
         }
     ]
 }
+```
